--- a/css/styles.css
+++ b/css/styles.css
@@ -1079,6 +1079,8 @@ form div input {
     border-radius: 15px;
     padding: 10px;
     font-weight: 700;
+    width: 90%;
+    margin:3% auto;
 }
 
 .maing-container h3{
@@ -1086,12 +1088,14 @@ form div input {
 }
 
 .genres-container{
-    width: 100%;
+    width: 90%;
     display: flex;
     flex-wrap: wrap;
     background-color: #080f28;
     border-radius: 15px;
     justify-content: center;
+    margin: 3% auto;
+    padding: 10px;
 }
 
 .moviesg-container{
@@ -1147,30 +1151,33 @@ form div input {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    width: 100%;
-    height: 30%;
+    width: 90%;
     padding: 10px 10px;
     color: white;
+    margin: auto;
 }
 
  .detail-marvel-endgame{
     margin: 5% 1% 5% 3%;
-    padding-bottom: 1%;
-    padding-top: 1%;
+    padding: 1% 0%;
     display: flex;
     flex-wrap: wrap;
     background-color:#007aff;
-     width: 220.38px;
-    height: 400.88px;
-    /* width: 1200px;
-    height: 380px; */
+    width: 35;
     padding-left: 1%;
     padding-right: 1%;
-    flex-direction: row;
+    flex-direction: column;
     justify-content:center;
     border-radius: 20px;
 }
-
+.detail-marvel-endgame p{
+    text-align: center;
+    margin: 5%;
+}
+.detail-marvel-endgame h3{
+    text-align: center;
+    margin: 5%;
+}
 .endgame-container{
     display: flex;
     background-color:#080f28;
@@ -1217,10 +1224,12 @@ form div input {
 .xx{
     max-height: 400.88;
 }
-/* .detail-marvel-endgame img{
-    width:384px;
-    height: 473px;
-} */
+ .detail-marvel-endgame img{
+     display: block;
+     margin: 5% auto;
+     width:80%;
+   
+} 
 
 
 /* Aqui empieza resultados de busqueda */
