--- a/css/estilos.css
+++ b/css/estilos.css
@@ -482,88 +482,289 @@ form div label{
     text-align: left;
     border-radius: 15px;
 }
+
 /* Aca comienza el detail-movies.html */
 
-.endgame{
+.detailmoviesdiv-container{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
+    background-color: #080f28;
     width: 90%;
-    padding: 10px 10px;
-    color: white;
-    margin: auto;
+    margin: 3% 5% 3% 5%;
+    padding: 15px 10px 15px 10px;
+    border-radius: 15px;
 }
 
- .detail-marvel-endgame{
-    margin: 5% 1% 5% 3%;
-    padding: 1% 0%;
+.detailmovie-container h2{
+    background-color: #080f28;
+    border-radius: 15px;
+    color: white;
+    padding: 10px;
+    font-weight: 700;
+    width: 90%;
+    margin: 3% 5% 0% 5%;
+}
+
+.detailmovieficha-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px 0px 0px 0px;
+    width: 25%;
+    height: 420px;
+    margin-left: 40px;
+    border-radius: 15px;
+    background-color:#007aff;
+    color: white;
+}
+
+.detailmovieficha-container img{
+    width: 85%;
+}
+
+.detailmovieficha-container h3{
+    margin: 5% 0% 0% 0%;
+}
+
+.detailmovieficha-container p{
+    margin: 0%;
+}
+
+.detailmoviessinopsis-container{
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    color: white;
+    margin: 0% 5% 0% 5%;
+}
+
+.detailmoviessinopsis-container h3{
+    margin:3px;
+}
+
+.detailmoviesfavoritos{
+    margin-top: 10px;
+    width: 230px;
+    padding: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #007aff;
+    border-radius: 15px;
+    color: white;
+    text-decoration: none;
+    border-style: solid;
+}
+
+.detailmoviesfavoritos h3{
+    margin: 0px 0px 0px 6px;
+    color: white; 
+}
+
+.detailmoviesfavoritos i{
+    margin:5px 5px 5px 5px;
+    color: yellow;
+} 
+
+.detailmoviesfavoritos a{
+    text-decoration: none;
+}
+
+.detailmoviesalinearfavoritos{
+    width: 400px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+/* Aca comienza el detailseries.html */
+
+.detailseriesdiv-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: #080f28;
+    width: 90%;
+    margin: 3% 5% 3% 5%;
+    padding: 15px 10px 15px 10px;
+    border-radius: 15px;
+}
+
+.detailseries-container h2{
+    background-color: #080f28;
+    border-radius: 15px;
+    color: white;
+    padding: 10px;
+    font-weight: 700;
+    width: 90%;
+    margin: 3% 5% 0% 5%;
+}
+
+.detailseriesficha-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px 0px 0px 0px;
+    width: 25%;
+    height: 420px;
+    margin-left: 40px;
+    border-radius: 15px;
+    background-color:#007aff;
+    color: white;
+}
+
+.detailseriesficha-container img{
+    width: 85%;
+}
+
+.detailseriesficha-container h3{
+    margin: 5% 0% 0% 0%;
+}
+
+.detailseriesficha-container p{
+    margin: 0%;
+}
+
+.detailseriessinopsis-container{
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    color: white;
+    margin: 0% 5% 0% 5%;
+}
+
+.detailseriessinopsis-container h3{
+    margin:3px;
+}
+
+.detailseriesfavoritos{
+    margin-top: 10px;
+    width: 230px;
+    padding: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #007aff;
+    border-radius: 15px;
+    color: white;
+    text-decoration: none;
+    border-style: solid;
+}
+
+.detailseriesfavoritos h3{
+    margin: 0px 0px 0px 6px;
+    color: white; 
+}
+
+.detailseriesfavoritos i{
+    margin:5px 5px 5px 5px;
+    color: yellow;
+} 
+
+.detailseriesfavoritos a{
+    text-decoration: none;
+}
+
+.detailseriesalinearfavoritos{
+    width: 400px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+/* Aca comienza el detail-genres.html */
+.detail-genres{
+    display: flex;
+    flex-direction: row;
+    flex-wrap:nowrap;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: auto;
+    background-color: #080f28
+}
+.fotodrama img{
+      border-radius: 50%;
+      width: 8%;
+      margin: 15px;
+}
+  
+.genres-box{
+    margin: 5% 1%;
+    padding-bottom: 1%;
+    padding-top: 1%;
     display: flex;
     flex-wrap: wrap;
     background-color:#007aff;
-    width: 35;
+    width: 220.38px;
+    height: 400.88;
     padding-left: 1%;
     padding-right: 1%;
-    flex-direction: column;
-    justify-content:center;
+    flex-direction: row;
+    justify-content: center;
     border-radius: 20px;
 }
-.detail-marvel-endgame p{
-    text-align: center;
-    margin: 5%;
-}
-.detail-marvel-endgame h3{
-    text-align: center;
-    margin: 5%;
-}
-.endgame-container{
-    display: flex;
-    background-color:#080f28;
-    justify-content: left;
-    margin-top: 0%;
-    width: 1900px;
-    padding: 0%;
-    border-radius: 20px;
-}
-
-.sinopsis-endgame{
+  
+.genres-box img {
     margin-top: 5%;
-    margin-right: 3%;
-    text-align: left;
+    width: 184px ;
+    height: 273px;
 }
-
-.sinopsis-endgame div{
-    border-radius: 15px;
-    background-color: #007aff;
-    width: 25%;
+  
+.genres-box h3{
+    margin-top: 7%;
+    margin-bottom: 2%;
     text-align: center;
+    color: white;
 }
-
-.sinopsis-endgame h2{
+  
+.genres-box p{
+    color: white;
+    margin-top: 2%;
     text-align: center;
+    font-size: 12px;
+    margin-bottom: 5%;
+
 }
-
-.sinopsis-endgame h3 .mover{
-    display: flex;
-    justify-content: flex-start;
-}
-
-
-.endgamefavs{
-    display: inline-block;
-    text-decoration: none;
+  
+.detail-generos h2{
     color:white;
+   background-color: #080f28;
+   border-radius: 15px;
+   width: 100%;
+   margin-bottom: 1%;
+   padding: 10px 10px;
+   font-weight: 700;
+   text-align: left;
 }
-
-.star{
-    color: yellow;
-}
-
-.xx{
-    max-height: 400.88;
-}
- .detail-marvel-endgame img{
-     display: block;
-     margin: 5% auto;
-     width:80%;
    
-} 
+.detailsG-tittle h3{
+   color:white;
+   border-radius: 15px;
+   width: 100%;
+   padding: 10px 10px;
+   font-weight: 700;
+   text-align: left;
+   background-color: #080f28;
+}
+   
+.detailsG {
+     background-color: #080f28;
+     display: flex;
+     flex-wrap: nowrap;
+     justify-content: space-around;
+     width: 100%;
+     height: 30%;
+     padding: 1px 10px;
+     color: white;
+     border-radius:20px ;
+}
+
+.endgame h2 {
+    display: inline-block;
+    width:1900px ;
+    background-color: #080f28;
+    margin-bottom: 1%;
+    padding: 10px 10px;
+    padding-left: 10px;
+    color:white;
+    font-weight: 700;
+    text-align: left;
+    border-radius: 15px;
+}
