--- a/css/estilos.css
+++ b/css/estilos.css
@@ -693,10 +693,11 @@ form div label{
       margin: 3% 5% 0% 5%;
 }
 
-.endgamefavoritos-container{
+.favoritosdiv-container{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    justify-content: space-around;
     background-color: #080f28;
     width: 90%;
     margin: 3% 5% 3% 5%;
@@ -729,6 +730,35 @@ form div label{
 }
 
 .endgamefavoritosficha-container p{
+    width: 100%;
+    text-align: center;
+}
+
+.annewithanefavoritosficha-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 25%;
+    padding: 20px 0px 15px 0px;
+    background-color: #007aff;
+    color: white;
+    border-radius: 15px;
+}
+
+.annewithanefavoritosficha-container img{
+    width: 90%;
+}
+
+.annewithanefavoritosficha-container a{
+    text-align: center;
+}
+
+.annewithanefavoritosficha-container h3{
+    width: 100%;
+    text-align: center;
+}
+
+.annewithanefavoritosficha-container p{
     width: 100%;
     text-align: center;
 }
