--- a/css/estilos.css
+++ b/css/estilos.css
@@ -368,11 +368,29 @@ form div label{
 
 /* Comienza el index de Generos */
 
-.maing-container{
-    color:white;
+.genero{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: 1% 5%;
+    padding: 2%;
+    max-width: 1900px;
+    flex-wrap: wrap;
+   
+}
+.genero a{
+   
+    width: 20%;
+    margin: 2% 0% 1% 0%;
+}
+.genero img{
+    display: block;
+    width: 70%;
+    margin: auto;
+    border-radius: 50%;
 }
 
-.maing-container h2{
+/* .maing-container h2{
     background-color: #080f28;
     border-radius: 15px;
     padding: 10px;
@@ -438,7 +456,7 @@ form div label{
     border-style: solid;
     border-radius: 15px;
     background-color: #007aff;
-}
+} */
 /* Aqui empieza resultados de busqueda */
 
 .main-container-result{
