--- a/css/estilos.css
+++ b/css/estilos.css
@@ -61,8 +61,13 @@ body header{
 }
 
 .lupa{
-    color:#1888ffe1;
+    color:#007aff;
     margin:0px 0px 36px 10px;
+}
+
+.burguermenu{ 
+    margin-top: 6.5%;
+    display: none;
 }
 
 .header-busqueda input {
@@ -80,6 +85,7 @@ nav{
     display: flex;
     justify-content: space-around;
     padding-top: 10px;
+    
 }
 header{
     background-image: url(../img/fondoclaro.jpg);
@@ -89,13 +95,26 @@ header{
     max-width: 135px;
     max-height: 135px;
 } 
+
+.registro-logo{
+    display: flex;
+    justify-content: center;
+    background-color:#007aff;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    display: none;
+}
+
+.registro-logo i{
+    color: black;
+}
+
 .header-nav{
     padding: 40px 0px 0px 0px;
     font-family: 'Noto Sans JP', sans-serif;
 }
-#logo{
-    padding: 0px 0px 0px 0px;
-}
+
 /* Aquí comienza el footer */
 footer {
     width: 100%;
@@ -512,5 +531,84 @@ form div label{
       border-radius: 50%;
       width: 8%;
       margin: 1.5% 6% ;
+}
+
+/* Aca comienza el responsive del Header y Footer */
+
+@media (max-width:420px){
+    
+    nav{
+        padding-top: 22px;
+    }
+
+    header{
+        width: 100%;
+    }
+
+    .burguermenu{
+        display: block;
+        margin-left: 5%;
+        margin-top: 8%;
+        color: #007aff;
+    }
+
+    .burguermenu i{
+        width: 100%;
+    }
+
+    .burguer{
+        width: 100%;
+    }
+
+    .header-nav{
+        display: none;
+    }
+    
+    .header-busqueda{
+        width: 40%;
+        margin-right: 10px; 
+    }  
+
+    .header-busqueda input{
+        width: 100%;
+        margin-bottom:25px;
+    }
+    
+    .header-registro{
+        display: none;
+    }
+
+    .header-registro a input{
+        margin-bottom: 23px;
+    }
+
+    .registro-logo{
+        display: flex;
+        justify-content: center;
+        background-color:#007aff;
+        height: 25px;
+        width: 25px;
+        border-radius: 50%;
+        margin-top: 7.5%;
+        margin-right: 2%;
+    }
+
+    .logo{
+        max-width: 110px;
+        max-height: 110px;
+    }
+
+    #logo{
+        margin-right: 15%;
+    }
+
+    .lupa{
+        margin: 0px 10px 27px 5px;
+    }
+
+    .box-copyright hr{
+        display: none;
+    }
+    
 }
 
