--- a/css/estilos.css
+++ b/css/estilos.css
@@ -569,7 +569,7 @@ form div label{
         margin-right: 10px; 
     }  
 
-    .header-busqueda input{
+    .header-busqueda form input{
         width: 100%;
         margin-bottom:25px;
     }
