--- a/css/estilos.css
+++ b/css/estilos.css
@@ -214,6 +214,45 @@ footer {
     border-radius: 20px;
 
 }
+.contenedor1{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    flex-direction: row;
+    padding: 60px 0;
+    width: 90%;
+    max-width: 1900px;
+    margin: auto;
+    background-color: #080f28;
+    border-radius: 20px;
+
+}
+.contenedor2{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    flex-direction: row;
+    padding: 60px 0;
+    width: 90%;
+    max-width: 1900px;
+    margin: auto;
+    background-color: #080f28;
+    border-radius: 20px;
+
+}
+.contenedor3{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    flex-direction: row;
+    padding: 60px 0;
+    width: 90%;
+    max-width: 1900px;
+    margin: auto;
+    background-color: #080f28;
+    border-radius: 20px;
+
+}
 .contenedor h2{
     color:green;
     font-size: 30px;
@@ -243,6 +282,7 @@ footer {
     padding-top: 10%;
 }
 .imagen-port h3{
+    text-transform: uppercase;
     margin-top: 15px;
     margin-bottom:  15px;
     color:white;
