--- a/css/estilos.css
+++ b/css/estilos.css
@@ -186,6 +186,12 @@ footer {
     padding: 0px 20px;
     color: white;
 }
+
+.box-copyright .integrantes {
+    margin-bottom: 20px;
+    font-weight: bolder;
+    
+}
 .box-copyright p {
     color: white;
     margin-top: 20px;
@@ -655,6 +661,8 @@ form div label{
     .lupa{
         margin: 0px 10px 27px 5px;
     }
+
+   
 
     .box-copyright hr{
         display: none;
