--- a/css/estilos.css
+++ b/css/estilos.css
@@ -230,6 +230,19 @@ footer {
     border-radius: 20px;
 
 }
+.contenedorSerie{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    flex-direction: row;
+    padding: 60px 0;
+    width: 90%;
+    max-width: 1900px;
+    margin: auto;
+    background-color: #080f28;
+    border-radius: 20px;
+
+}
 .contenedor1{
     display: flex;
     flex-wrap: wrap;
