--- a/css/estilos.css
+++ b/css/estilos.css
@@ -493,7 +493,7 @@ form div label{
 .generoPeliculas a, .generoSeries a{
     display: inline-block;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,BlinkMacSystemFont,segoe ui,Roboto,Oxygen,Ubuntu,Cantarell,open sans,helvetica neue,sans-serif ;
     text-decoration: none;
     font-weight: bolder;
     font-size: medium;
@@ -501,8 +501,8 @@ form div label{
     background-color: #007aff;
     padding-top: 50px;
     height: 17vh;
-    color: midnightblue;
-    border-color:midnightblue;
+    color:white;
+    border-color:white;
     width: 135px;
     vertical-align: middle;
     border-radius: 50%;
