--- a/css/estilos.css
+++ b/css/estilos.css
@@ -508,7 +508,7 @@ form div label{
     border-radius: 50%;
     margin: 1.5% 3%;
     border-style: double;
-    
+    border-width: 6px;   
 }
 /* Aqui empieza resultados de busqueda */
 
