--- a/css/estilos.css
+++ b/css/estilos.css
@@ -578,7 +578,7 @@ form div label{
 
 .detailseriessinopsis-container{
     width: 60%;
-    /* display: flex; */
+    display: flex;
     flex-wrap: wrap;
     color: white;
     margin: 4% 3%;
@@ -588,7 +588,6 @@ form div label{
 .boton-favoritos {
     display: flex;
     justify-content: flex-end;
-    margin: 0px 0px 0px 25px;
    
 
 
@@ -626,38 +625,12 @@ form div label{
     justify-content: flex-start;
 }
 
-.movie {
-    margin: 30px;
-    text-decoration: none;
-}
-
-a{
-    text-decoration: none;
-    color: white;
-}
-
-
-
 /* Aca comienza el detail-genres.html */
 
-.fotodrama a{
-    display: inline-block;
-    text-align: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,BlinkMacSystemFont,segoe ui,Roboto,Oxygen,Ubuntu,Cantarell,open sans,helvetica neue,sans-serif ;
-    text-decoration: none;
-    font-weight: bolder;
-    font-size: medium;
-    text-transform: uppercase;
-    background-color: #007aff;
-    padding-top: 50px;
-    height: 17vh;
-    color:white;
-    border-color:white;
-    width: 135px;
-    vertical-align: middle;
-    border-radius: 50%;
-    margin: 1.5% 3%;
-    border-style: double;
+.fotodrama img{
+      border-radius: 50%;
+      width: 8%;
+      margin: 1.5% 6% ;
 }
 
 /* Aca comienza el responsive del Header y Footer */
