--- a/css/estilos.css
+++ b/css/estilos.css
@@ -217,6 +217,17 @@ footer {
     padding: 15px;
     text-align: left;
 }
+.tituloSeries{
+    display: inline-block;
+    background-color: #080f28;
+    color: white;
+    max-width: 1900px;
+    margin: 2% 5%;
+    width: 90%;
+    border-radius: 20px;
+    padding: 15px;
+    text-align: left;
+}
 .contenedor{
     display: flex;
     flex-wrap: wrap;
@@ -231,6 +242,19 @@ footer {
 
 }
 .contenedorSerie{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    flex-direction: row;
+    padding: 60px 0;
+    width: 90%;
+    max-width: 1900px;
+    margin: auto;
+    background-color: #080f28;
+    border-radius: 20px;
+
+}
+.contenedorSeries{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -626,8 +650,13 @@ form div label{
 }
 
 /* Aca comienza el detail-genres.html */
-
-.fotodrama a{
+.titulo h2{
+    text-transform: uppercase;
+}
+.tituloSeries h2{
+    text-transform: uppercase;
+}
+.fotodrama p{
     display: inline-block;
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,BlinkMacSystemFont,segoe ui,Roboto,Oxygen,Ubuntu,Cantarell,open sans,helvetica neue,sans-serif ;
