--- a/css/estilos.css
+++ b/css/estilos.css
@@ -602,7 +602,7 @@ form div label{
 
 .detailseriessinopsis-container{
     width: 60%;
-    display: flex;
+    /* display: flex; */
     flex-wrap: wrap;
     color: white;
     margin: 4% 3%;
@@ -612,6 +612,7 @@ form div label{
 .boton-favoritos {
     display: flex;
     justify-content: flex-end;
+    margin: 0px 0px 0px 25px;
    
 
 
@@ -627,6 +628,16 @@ form div label{
     border-radius: 15px;
     color: white;
     text-decoration: none;
+}
+
+.movie {
+    margin: 30px;
+    text-decoration: none;
+}
+
+a{
+    text-decoration: none;
+    color: white;
 }
 
 .detail-favoritos h3{
