--- a/css/estilos.css
+++ b/css/estilos.css
@@ -774,5 +774,62 @@ a{
     .box-footer a {
         display: none;
     }
+
+    .generoPeliculas a, .generoSeries a{
+        display: inline-block;
+        text-align: center;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,BlinkMacSystemFont,segoe ui,Roboto,Oxygen,Ubuntu,Cantarell,open sans,helvetica neue,sans-serif ;
+        text-decoration: none;
+        font-weight: bolder;
+        font-size: smaller;
+        text-transform: uppercase;
+        background-color: #007aff;
+        padding-top: 30px;
+        height: 14vh;
+        color:white;
+        border-color:white;
+        width: 100px;
+        vertical-align: middle;
+        border-radius: 50%;
+        margin: 2% 3%;
+        border-style: double;
+        border-width: 6px;   
+    }
+
+    .hijo-detail-series {
+        display: flex;
+        flex-direction: column;
+        
+    }
+    
+    
+    .series{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 90%;
+        margin: auto;
+        
+    }
+    
+    .detailseriessinopsis-container{
+        width: 90%;
+        display: flex; 
+        flex-wrap: wrap;
+        color: white;
+        margin: auto;
+        text-transform: uppercase;
+    }
+
+    .titulo h1 {
+        font-size: x-large;
+        text-align: center;
+    }
+
+    .titulo h2 {
+        font-size: x-large;
+        text-align: center;
+    }
 }
+
 
